--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<body>
 		<form> 
 			<select id="colorSelect"> 
-				<option>Red</option> 
-				<option>Green</option> 
-				<option>White</option> 
-				<option>Black</option> 
+				<option onclick="removeColor('Red')">Red</option> 
+				<option onclick="removeColor('Green')">Green</option> 
+				<option onclick="removeColor('White')">White</option> 
+				<option  onclick="removeColor('Black')">Black</option> 
 			</select> 
-			<input type="button" value="Select and Remove"> 
+			<input class="onclick=remind()" type="button" value="Select and Remove"> 
 		</form>
 
 		<script type="text/javascript" src="./script.js">
