--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 	<body>
 		<form> 
 			<select id="colorSelect"> 
+				<option></option>
 				<option onclick="removeColor('Red')">Red</option> 
 				<option onclick="removeColor('Green')">Green</option> 
 				<option onclick="removeColor('White')">White</option> 
